src/objects/Apttus_Config2__ProductTranslation__c.object
<CustomObject>
    <description>This object holds the translated values of product object fields for all the languages</description>
    <fields>
        <fullName>APTS_Product_Enabled_for_web_shop_s__c</fullName>
        <formula>Apttus_Config2__ProductId__r.APTS_Product_Enabled_for_web_shop_s__c</formula>
        <label>Product Enabled for web shop(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Translation_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>Product Translation Ext.ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_active__c</fullName>
        <formula>Apttus_Config2__ProductId__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>Translated description of the product</description>
        <inlineHelpText>Translated description of the product</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Family__c</fullName>
        <description>Translated product familty</description>
        <inlineHelpText>Translated product familty</inlineHelpText>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Language__c</fullName>
        <description>Language of the translated product record</description>
        <inlineHelpText>Language of the translated product record</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Name__c</fullName>
        <description>holds translated product name</description>
        <inlineHelpText>hold translated product name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCode__c</fullName>
        <description>Translated product code</description>
        <inlineHelpText>translated product code</inlineHelpText>
        <label>ProductCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product record</description>
        <inlineHelpText>Lookup to the product record</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Translation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Translation</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__ProductCode__c</columns>
        <columns>Apttus_Config2__ProductId__c</columns>
        <columns>Apttus_Config2__Language__c</columns>
        <columns>Apttus_Config2__Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>APTS_Product_Translation_Ext_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus_Config2__Name__c</field>
            <operation>contains</operation>
            <value>FRAIS</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>